(lang dune 3.6)

(name opc)

(generate_opam_files true)

(source
 (github geekya215/opc))

(authors "geekya215")

(maintainers "geekya215")

(license MIT)

(package
 (name opc)
 (synopsis "parser combinator with ocaml")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
